--- a/Activity.html
+++ b/Activity.html
@@ -14,7 +14,7 @@
     <!-- Header med navigasjonsmeny. Kobler til andre sider som f.eks. "index.html" og "github.html" -->
     <header>
         <nav class="navbar navbar--style">
-            <!-- https://www.pinterest.com/pin/bird-flower-leaf-animal-logo-design-nature-symbol-black-and-white-curved-fluid-hand--533887730820443196/ -->
+            <!-- Dette bildet er hentet fra nettsiden Pinterest og er laget av en bruker (Avennon, 2024). Hentet fra: https://www.pinterest.com/pin/bird-flower-leaf-animal-logo-design-nature-symbol-black-and-white-curved-fluid-hand--533887730820443196/ -->
             <img src="image/images-Activity-page/file.png" alt="Bildet av logo" class="navbar__image">
             <ul class="navbar__liste navbar__liste--style">
                 <li><a href="index.html">Hjem</a></li>
@@ -45,13 +45,14 @@
 
             <div class="gallery">
                 <img src="image/images-Activity-page/fjelltur1.jpg" alt="Sti i fjellet">
-                <!--https://ut.no/turforslag/1112192112/liin  Bilde 1-->
+                <!-- Dette bildet er hentet fra ut.no og er fotografert av Lars Erik Sira (Sira, 2024). Hentet fra 
+                 https://ut.no/turforslag/1112192112/liin  Bilde 1-->
+
+                <!-- Disse tre bildene er hentet fra ut.no og er fotografert av Vennesla turstigruppe (Vennesla turstigruppe, 2024). 
+                  Hentet fra: https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 2, bilde 3 og bilde 4. -->
                 <img src="image/images-Activity-page/fjelltur2.jpg" alt="Utsikt over innsjø">
-                <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 2-->
                 <img src="image/images-Activity-page/fjelltur3.jpg" alt="Solnedgang i skogen">
-                <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 3-->
                 <img src="image/images-Activity-page/fjelltur4.jpg" alt="Fottur i skogen med en hund">
-                <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 4-->
             </div>
         </section>
 
