--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -12,11 +12,12 @@
     <header class="bar bar--farge">
         <div class="bar__icon bar__icon--style">
             <!-- Logo -->
+            <!-- Bildet er fra Velferdsforskningsinstituttet NOVA ved OsloMet
+             – storbyuniversitetet (NOVA, 2024). Hentet fra https://x.com/NOVAnytt -->
             <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo-fjernet-bakgrunn.png" alt="Oslomet-logo"
                     class="bar__image">
             </a>
 
-            <!-- Navigasjonslenker som alltid er synlige -->
             <a href="index.html" class="bar__link bar__link--farge bar__link--style">Hjemmeside</a>
             <a href="Activity.html" class="bar__link bar__link--farge bar__link--style">Activity</a>
             <a href="github-page.html" class="bar__link bar__link--farge bar__link--style">GitHub</a>
@@ -24,7 +25,7 @@
         </div>
 
         <!-- Søk -->
-        <a href="#" style="text-decoration: none;" class="bar__search bar__search--farge bar__search--style">Søk 🔍</a>
+        <a href="#" class="bar__search bar__search--farge bar__search--style">Søk 🔍</a>
 
     </header>
 
@@ -115,10 +116,10 @@
                     Vi har brukt media queries for alle brukere av ulike skjerm.
                 </p>
                 <div class="accesibility__image">
-                    <img src="image/images-Accesibility-page/eksempelAvKode-1.png" alt="">
-                    <img src="image/images-Accesibility-page/eksempelAvKode-2.png" alt="">
-                    <img src="image/images-Accesibility-page/eksempelAvKode-3.png" alt="">
-                    <img src="image/images-Accesibility-page/eksempelAvKode-4.png" alt="">
+                    <img src="image/images-Accesibility-page/eksempelAvKode-1.png" alt="Eksempel av kode">
+                    <img src="image/images-Accesibility-page/eksempelAvKode-2.png" alt="Eksempel av kode">
+                    <img src="image/images-Accesibility-page/eksempelAvKode-3.png" alt="Eksempel av kode">
+                    <img src="image/images-Accesibility-page/eksempelAvKode-4.png" alt="Eksempel av kode">
 
                 </div>
 
