--- a/github-page.html
+++ b/github-page.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="stylesheet/style.css" />
-  <!-- denne lenken er fra fontawesome (sosiale medier ikoner) -->
+  <!-- Denne lenken "link" er hentet fra nettsiden fontawesome som er sosiale medier ikoner (Font Awesome, 2024). Hentet fra https://fontawesome.com/v6/search?o=r&m=free -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,18 +16,19 @@
   <header class="bar bar--farge">
     <div class="bar__icon bar__icon--style">
       <!-- Logo -->
+      <!-- Bildet er fra Velferdsforskningsinstituttet NOVA ved OsloMet
+       – storbyuniversitetet (NOVA, 2024). Hentet fra https://x.com/NOVAnytt -->
       <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo-fjernet-bakgrunn.png" alt="Oslomet-logo"
           class="bar__image">
       </a>
 
-      <!-- Navigasjonslenker som alltid er synlige -->
       <a href="index.html" class="bar__link bar__link--farge bar__link--style">Hjemmeside</a>
       <a href="HTMLAccesibility.HTML" class="bar__link bar__link--farge bar__link--style">Accessibility</a>
       <a href="Activity.html" class="bar__link bar__link--farge bar__link--style">Activity</a>
     </div>
 
     <!-- Søk -->
-    <a href="#" style="text-decoration: none;" class="bar__search bar__search--farge bar__search--style">Søk 🔍</a>
+    <a href="#" class="bar__search bar__search--farge bar__search--style">Søk 🔍</a>
 
   </header>
 
@@ -137,6 +138,7 @@
 
 
       <table class="footer__tableRight footer__tableRight--style">
+        <!-- Alt linkene innenfor "tr" er sosiale medier ikoner (Font Awesome, 2024). Hentet fra https://fontawesome.com/v6/search?o=r&m=free  -->
         <tr>
           <th><a href="https://www.facebook.com/oslomet/"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
           </th>
