change class names

--- a/github-page.html
+++ b/github-page.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="bar bar--farge">
-    <div class="bar__icon bar__icon--style">
+    <div class="bar__icon">
       <!-- Logo -->
       <!-- Bildet er fra Velferdsforskningsinstituttet NOVA ved OsloMet
        – storbyuniversitetet (NOVA, 2024). Hentet fra https://x.com/NOVAnytt -->
@@ -22,13 +22,14 @@
           class="bar__image">
       </a>
 
-      <a href="index.html" class="bar__link bar__link--farge bar__link--style">Hjemmeside</a>
-      <a href="HTMLAccesibility.HTML" class="bar__link bar__link--farge bar__link--style">Accessibility</a>
-      <a href="Activity.html" class="bar__link bar__link--farge bar__link--style">Activity</a>
+      <a href="index.html" class="bar__link bar__link--farge bar__link--style bar__link--size">Hjemmeside</a>
+      <a href="HTMLAccesibility.HTML"
+        class="bar__link bar__link--farge bar__link--style bar__link--size">Accessibility</a>
+      <a href="Activity.html" class="bar__link bar__link--farge bar__link--style bar__link--size">Activity</a>
     </div>
 
     <!-- Søk -->
-    <a href="#" class="bar__search bar__search--farge bar__search--style">Søk 🔍</a>
+    <a href="#" class="bar__search bar__search--farge bar__search--style bar__search--size">Søk 🔍</a>
 
   </header>
 
