--- a/github-page.html
+++ b/github-page.html
@@ -123,23 +123,10 @@
     </div>
 
     <div class="footer__page footer__page--style">
-      <table class="footer__tableLeft">
-        <tr>
-          <th>OSLO METROPOLITAN UNIVERSITY</th>
-          <td>STORBYUNIVERSITETET</td>
-        </tr>
 
-        <tr>
-          <td>Postboks 7, Eksempel plass</td>
-          <td>1147</td>
-          <td>Tlf.: 11 11 11 11</td>
-        </tr>
-      </table>
-
-
-
-      <table class="footer__tableRight footer__tableRight--style">
-        <!-- Alt linkene innenfor "tr" er sosiale medier ikoner (Font Awesome, 2024). Hentet fra https://fontawesome.com/v6/search?o=r&m=free  -->
+      <table class="footer__tableRight footer__tableRight--style" ">
+        <!-- Alt linkene innenfor " tr" er sosiale medier ikoner (Font Awesome, 2024). Hentet fra
+        https://fontawesome.com/v6/search?o=r&m=free -->
         <tr>
           <th><a href="https://www.facebook.com/oslomet/"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
           </th>
