Legge-til-lenker
Lagt inn lenker til bilder

--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -37,8 +37,13 @@
             </h1>
 
             <div class="head__img">
+                <!--Bildet er fra nettsiden pixabay.com som illustrerer logoer-->
+                <!--Hentet fra https://pixabay.com/illustrations/logo-html-html5-icon-2582748/ -->
                 <img src="image/images-Accesibility-page/HTML5.png" alt="HTML5 logo">
+                <!--Bildet er fra nettsiden pixabay.com som illustrerer logoer-->
+                <!--Hentet fra https://pixabay.com/no/illustrations/logo-css-css3-ikonet-2582747/-->
                 <img src="image/images-Accesibility-page/css3.png" alt="CSS3 logo">
+                <!--Bildet er tatt av koden vår ved hjelp av utklippsverktøy-->
                 <img class="twoboxes" src="image/images-Accesibility-page/Doctype__img.png" alt="bilde av koding">
             </div>
 
