endret linke navn

--- a/Activity.html
+++ b/Activity.html
@@ -17,10 +17,9 @@
             <!-- Dette bildet er hentet fra nettsiden Pinterest og er laget av en bruker (Avennon, 2024). Hentet fra: https://www.pinterest.com/pin/bird-flower-leaf-animal-logo-design-nature-symbol-black-and-white-curved-fluid-hand--533887730820443196/ -->
             <img src="image/images-Activity-page/file.png" alt="Bildet av logo" class="navbar__image">
             <ul class="navbar__liste navbar__liste--style">
-                <li><a href="index.html">Hjem</a></li>
+                <li><a href="index.html">Hjemmeside</a></li>
                 <li><a href="HTMLAccesibility.HTML">Tilgjengelighet</a></li>
                 <li><a href="github-page.html">GitHub</a></li>
-                <li><a href="Activity.html">Aktivitet</a></li>
             </ul>
         </nav>
     </header>
