--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -19,7 +19,7 @@
             </a>
 
             <a href="index.html" class="bar__link bar__link--farge bar__link--style bar__link--size">Hjemmeside</a>
-            <a href="Activity.html" class="bar__link bar__link--farge bar__link--style bar__link--size">Activity</a>
+            <a href="Activity.html" class="bar__link bar__link--farge bar__link--style bar__link--size">Aktivitet</a>
             <a href="github-page.html" class="bar__link bar__link--farge bar__link--style bar__link--size">GitHub</a>
 
         </div>
