--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 
 <head>
     <meta charset="UTF-8">
@@ -245,7 +245,7 @@
                             <li class="page__boks page__boks--border page__boks--size">
                                 <a
                                     href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE1400/2024/H%C3%98ST">Programmering</a>
-                                <p style="margin-block:0;">DAPE1400</p>
+                                <p>DAPE1400</p>
 
                             </li>
                             <li class="page__boks page__boks--border page__boks--size">
@@ -278,7 +278,7 @@
                             <li class="page__boks page__boks--border page__boks--size">
                                 <a href="https://student.oslomet.no/studier/-/studieinfo/emne/DAPE2101/2024/H%C3%98ST">Fysikk
                                     og kjemi</a>
-                                <p style="margin-block:0;">DAPE2101</p>
+                                <p>DAPE2101</p>
                             </li>
 
                             <li class="page__boks page__boks--border page__boks--size">
@@ -310,7 +310,7 @@
                             <li class="page__boks page__boks--border page__boks--size">
                                 <a href="https://student.oslomet.no/studier/-/studieinfo/emne/MAMO2100/2024/H%C3%98ST">Moderne
                                     fysikk</a>
-                                <p style="margin-block:0;">MAMO2100</p>
+                                <p>MAMO2100</p>
                             </li>
                         </ul>
                     </section>
