--- a/github-page.html
+++ b/github-page.html
@@ -24,8 +24,8 @@
 
       <a href="index.html" class="bar__link bar__link--farge bar__link--style bar__link--size">Hjemmeside</a>
       <a href="HTMLAccesibility.HTML"
-        class="bar__link bar__link--farge bar__link--style bar__link--size">Accessibility</a>
-      <a href="Activity.html" class="bar__link bar__link--farge bar__link--style bar__link--size">Activity</a>
+        class="bar__link bar__link--farge bar__link--style bar__link--size">Tilgjengelighet</a>
+      <a href="Activity.html" class="bar__link bar__link--farge bar__link--style bar__link--size">Aktivitet</a>
     </div>
 
     <!-- Søk -->
@@ -117,28 +117,10 @@
 
   <footer class="footer">
 
-
     <div class="footer__upper">
       <h1>Kontakt oss!</h1>
     </div>
 
-    <div class="footer__page footer__page--style">
-
-      <table class="footer__tableRight footer__tableRight--style" ">
-        <!-- Alt linkene innenfor " tr" er sosiale medier ikoner (Font Awesome, 2024). Hentet fra
-        https://fontawesome.com/v6/search?o=r&m=free -->
-        <tr>
-          <th><a href="https://www.facebook.com/oslomet/"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
-          </th>
-          <th><a href="https://x.com/oslomet"><i class="fa-brands fa-square-x-twitter"></i>X
-              (Twitter)</a></th>
-          <th><a href="https://no.linkedin.com/school/oslomet/"><i class="fa-brands fa-linkedin"></i>Linkedln</a></th>
-          <th><a href="https://www.instagram.com/oslomet/?hl=nb"><i
-                class="fa-brands fa-square-instagram"></i>Instagram</a></th>
-
-        </tr>
-      </table>
-    </div>
   </footer>
 </body>
 
