--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -68,6 +68,8 @@
                 </p>
 
                 <div class="accesibility__image">
+                    <!--Bildene er tatt ved hjelp av utklippstavle fra nettsiden pagespeed som tester HTML og CSS-->
+                    <!--Testen er gjort på nettsiden https://pagespeed.web.dev/-->
                     <img src="image/images-Github-page/Test-performance-1.png" alt="Kodeendringer eksempel 1">
                     <img src="image/images-Github-page/Test-Performance-2.png" alt="Kodeendringer eksempel 2">
                 </div>
@@ -76,6 +78,18 @@
 
             <section class="accesibility__section">
 
+                <h1>Test av scaling</h1>
+
+                <p class="accesibility__tekst accesibility__tekst--style">
+                    Vi ønsket å lage en nettside som var responsiv og estetisk for laptop, mobil og desktop. 
+                    For å kunne se hvordan nettsiden vår ville bli påvirket under scaling (feks ved bruk av mobil), valgte vi å 
+                    kjøre gjennom tester som sammenliknet layout samt skala på ytelsesproblemer. Vi fant en nettside vi mente 
+                    ga oss den feebacken vi trengte for å få et helhetslig inntrykk av at koden vår fungerte som ønsket. Nettsiden 
+                    heter <a href="//pagespeed.web.dev/" traget="_blank">pagespeed</a>, og resultatet kan du se i bildene ovenfor.
+                    For å teste layout på desktop valgte vi å gjøre en manuell test ved å koble oss opp på en desktop og se scalingen
+                    selv. 
+                </p>
+
                 <h1>Tilgjengelighet ved bruk av fargevalg og kontrast</h1>
 
                 <p class="accesibility__tekst accesibility__tekst--style">
@@ -83,7 +97,7 @@
                     mellom tekst og bakgrunn slik at det blir en god lesbarhet.
                 </p>
                 <p class="accesibility__tekst accesibility__tekst--style">
-                    <b>Headingene</b> og <b>foterene</b> bruker høy kontrast med hvit tekst på blå gradientbakgrunn eks:
+                    <b>Headingene</b> og <b>footerene</b> bruker høy kontrast med hvit tekst på blå gradientbakgrunn eks:
                     (background-image: linear-gradient(to right, #4b9cd3, #0077cc) i .bar og .footer). I headeren har vi
                     laget en "class" som heter .bar__link. Alle linkene i headeren har hvit bakgrunn. Ved bruk av disse
                     fargene hjelper det brukere med redusert syn å forstå elementer som er interaktive.
