--- a/Activity.html
+++ b/Activity.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min Aktivitet - Fotturer</title>
+    <!--  Dette bildet er hentet fra nettsiden Pinterest og er laget av en bruker (Avennon, 2024). Hentet fra: https://www.pinterest.com/pin/bird-flower-leaf-animal-logo-design-nature-symbol-black-and-white-curved-fluid-hand--533887730820443196/ -->
+    <link rel="icon" type="image/jpg" href="image/images-Activity-page/file.png">
     <link rel="stylesheet" href="stylesheet/style.css">
     <!-- Kobler til det eksterne CSS-stilarket for hele nettstedet -->
 </head>
