--- a/github-page.html
+++ b/github-page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="no">
 
 <head>
   <meta charset="UTF-8" />
@@ -115,13 +115,7 @@
 
   </article>
 
-  <footer class="footer">
 
-    <div class="footer__upper">
-      <h1>Kontakt oss!</h1>
-    </div>
-
-  </footer>
 </body>
 
 </html>
