--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="bar__meny">
                 <div class="bar__dropdown">
-                    <button class="bar__dropdownbtn bar__dropdownbtn--size">Pages ▼</button>
+                    <button class="bar__dropdownbtn bar__dropdownbtn--size">Nettsider ▼</button>
                     <div class="bar__dropdown-content">
                         <a href="HTMLAccesibility.HTML">Tilgjengelighet</a>
                         <a href="Activity.html">Aktivitet</a>
