--- a/Activity.html
+++ b/Activity.html
@@ -97,7 +97,7 @@
 
     <!-- Footer som vises nederst på siden -->
     <footer class="footer__activity footer__activity--farge">
-        <p>&copy; 2024 Min Aktivitet</p>
+        <p>2024 Min Aktivitet</p>
     </footer>
 </body>
 
