--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -47,7 +47,7 @@
                 <img class="twoboxes" src="image/images-Accesibility-page/Doctype__img.png" alt="bilde av koding">
             </div>
 
-            <h2 class="page__aboutproject" style="text-align: center">
+            <h2 class="page__aboutproject" style="text-align: center;">
                 Denne siden er laget for å kunne gå i dybden på hvilke avgjørelser
                 vi har tatt for å optimalisere vår nettside. Vi ønsker å begrunne valg av kode, struktur og
                 design ved hjelp av HTML og CSS, og vise til testing gjennomført for kvalitetssikring av kodingen
@@ -81,19 +81,13 @@
                 <h1>Test av scaling</h1>
 
                 <p class="accesibility__tekst accesibility__tekst--style">
-                    Vi ønsket å lage en nettside som var responsiv og estetisk for laptop, mobil og desktop.
-                    For å kunne se hvordan nettsiden vår ville bli påvirket under scaling (feks ved bruk av mobil),
-                    valgte vi å
-                    kjøre gjennom tester som sammenliknet layout samt skala på ytelsesproblemer. Vi fant en nettside vi
-                    mente
-                    ga oss den feebacken vi trengte for å få et helhetslig inntrykk av at koden vår fungerte som ønsket.
-                    Nettsiden
-                    heter <a href="//pagespeed.web.dev/" traget="_blank" style="color: white;">pagespeed</a>, og
-                    resultatet kan du se i
-                    bildene ovenfor.
-                    For å teste layout på desktop valgte vi å gjøre en manuell test ved å koble oss opp på en desktop og
-                    se scalingen
-                    selv.
+                    Vi ønsket å lage en nettside som var responsiv og estetisk for laptop, mobil og desktop. 
+                    For å kunne se hvordan nettsiden vår ville bli påvirket under scaling (feks ved bruk av mobil), valgte vi å 
+                    kjøre gjennom tester som sammenliknet layout samt skala på ytelsesproblemer. Vi fant en nettside vi mente 
+                    ga oss den feebacken vi trengte for å få et helhetslig inntrykk av at koden vår fungerte som ønsket. Nettsiden 
+                    heter <a href="//pagespeed.web.dev/" traget="_blank">pagespeed</a>, og resultatet kan du se i bildene ovenfor.
+                    For å teste layout på desktop valgte vi å gjøre en manuell test ved å koble oss opp på en desktop og se scalingen
+                    selv. 
                 </p>
 
                 <h1>Tilgjengelighet ved bruk av fargevalg og kontrast</h1>
@@ -103,8 +97,7 @@
                     mellom tekst og bakgrunn slik at det blir en god lesbarhet.
                 </p>
                 <p class="accesibility__tekst accesibility__tekst--style">
-                    <b>Headingene</b> og <b>footerene</b> bruker høy kontrast med hvit tekst på blå gradientbakgrunn
-                    eks:
+                    <b>Headingene</b> og <b>footerene</b> bruker høy kontrast med hvit tekst på blå gradientbakgrunn eks:
                     (background-image: linear-gradient(to right, #4b9cd3, #0077cc) i .bar og .footer). I headeren har vi
                     laget en "class" som heter .bar__link. Alle linkene i headeren har hvit bakgrunn. Ved bruk av disse
                     fargene hjelper det brukere med redusert syn å forstå elementer som er interaktive.
@@ -115,8 +108,8 @@
                 <p class="accesibility__tekst accesibility__tekst--style">
                     Vi har gjort noen endringer med tekststørrelsen og linjehøyder på enkelte seksjoner i nettsiden.
                     Overskrifter som <b>.page__heading--style</b> har store skrifttyper (2rem for å fremheve viktige
-                    seksjoner). Vi har også brukt i tekster "paragraphs" i en lettlest størrelse i (1.2rem) og samtidig
-                    tatt linjehøyden på 1.5 i enkelte steder som eksempel: <b>.footer__tableMiddle--style</b>. Vi valgte
+                    seksjoner). Vi har brukt "paragraphs" i tekster i en lettlest størrelse (1.2rem), samtidig som vi har valgt
+                    å bruke linjehøyden 1.5 på enkelte steder som eksempel: <b>.footer__tableMiddle--style</b>. Vi valgte
                     disse kodene fordi det forbedrer lesbarheten når det er mange tekstblokker.
                 </p>
 
@@ -142,6 +135,7 @@
                     Vi har brukt media queries for alle brukere av ulike skjerm.
                 </p>
                 <div class="accesibility__image">
+                    <!--Bildene er tatt ved hjelp av utklippstavle fra koden vår-->
                     <img src="image/images-Accesibility-page/eksempelAvKode-1.png" alt="Eksempel av kode">
                     <img src="image/images-Accesibility-page/eksempelAvKode-2.png" alt="Eksempel av kode">
                     <img src="image/images-Accesibility-page/eksempelAvKode-3.png" alt="Eksempel av kode">
