--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Lager dropdown meny -->
             <div class="bar__meny">
                 <div class="bar__dropdown">
                     <button class="bar__dropdownbtn bar__dropdownbtn--size">Nettsider ▼</button>
@@ -56,6 +57,7 @@
 
 
     <article class="page">
+        <!-- Denne seksjonen tar med img, overskrifter og table -->
         <section>
             <!-- Dette bildet er hentet fra Anvendt datateknologi nettsiden (OsloMet, 2024). Henter fra: https://www.oslomet.no/studier/tkd/anvendt-datateknologi -->
             <img src="image/Anvendt-datateknologi_bachelor.jpg" alt="Bilde av studiet" class="page__image">
@@ -104,12 +106,15 @@
             </table>
         </section>
 
+        <!-- Liten seksjon for tekst -->
         <section>
             <p class="page__tekst page__tekst--size">
                 Få innsikt i matematiske modeller og datadrevne metoder som kan løse mange praktiske og samfunnsnyttige
                 oppgaver.
             </p>
         </section>
+
+        <!-- Hele denne seksjonen tar frem labels og inputs -->
         <section class="page__trekk">
 
             <div class="page__trekk-item">
@@ -138,6 +143,7 @@
 
                 </div>
             </div>
+            <!-- Hver gang diven "page___trekk-item blir brukt lager det en ny input og label" -->
             <div class="page__trekk-item">
                 <input type="checkbox" id="item2">
                 <label class="page__trekk-header page__trekk-header--bold page__trekk-header--farge" for="item2">Slik
@@ -790,6 +796,7 @@
             </div>
         </section>
 
+        <!-- Denne seksjonen tar med linker, tabell og bilder -->
         <section class="page__wrapper">
 
             <h2>Studiested</h2>
@@ -838,6 +845,7 @@
         <h1 style="text-align: center;">Du er kanskje også
             interessert i disse?</h1>
 
+        <!-- Her er linkene brukt for grids -->
         <section class="page__grid-container">
             <!-- Anvendt datateknologi -->
             <a href="https://www.oslomet.no/studier/tkd/anvendt-datateknologi" class="page__grid-item">
@@ -911,6 +919,7 @@
         </section>
 
         <h1>Studenthistorier</h1>
+        <!-- tatt inn bilder og tekst -->
         <section>
             <a href="https://www.oslomet.no/studier/studenthistorier/spa-fremtiden-matematikk-datavitenskap"
                 class="page__studenthistorie">
@@ -945,7 +954,7 @@
 
     <!-- Slutt av page -->
 
-
+    <!-- Footer -->
     <footer class="footer">
 
         <div class="footer__upper">
@@ -955,6 +964,7 @@
 
         </div>
 
+        <!-- Denne diven har 3 tabeller inni seg -->
         <div class="footer__page footer__page--style">
 
             <table class="footer__tableLeft">
@@ -1007,6 +1017,7 @@
             </table>
         </div>
     </footer>
+    <!-- Slutt av footer -->
 </body>
 
 </html>
