--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -57,13 +57,13 @@
 
 
                 <p class="accesibility__tekst accesibility__tekst--style">
-                    Våres gruppe har lagt stor vekt på tilgjengelighet i utformingen av nettsidene, slik at innholdet er
+                    Gruppen vår har lagt stor vekt på tilgjengelighet i utformingen av nettsidene. Dette for å sikre at innholdet er
                     brukervennlig for alle. For at nettsiden er sånn som den er nå, har vi skrevet inn media queries som
                     tilpasser designet til ulike skjermstørrelser, slik at det fungerer både for små og store skjermer.
                     For bildene har vi brukt <b>max-width: 100%</b> slik at bildene skalerer seg og aldri overskrider
                     sin tilgjengelige "container". I tillegg har vi tatt med flere responsive grids og flexbox for
                     layout, som gir en struktur der de justerer elementenes plassering og størrelse basert på skjermens
-                    bredde. Dette sikrer seg at nettsiden er oversiktlig, lett navigerbar og leselig, uansett hvilken
+                    bredde. Dette sikrer seg at nettsiden er oversiktlig, lett navigerbar og leselig uansett hvilken
                     enhet som brukes.
                 </p>
 
