--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -33,7 +33,7 @@
     <main>
         <div class="top__page">
             <h1 class="main__title">
-                <strong>Accessibility page </strong> - våre tanker og avgjørelser
+                Accessibility page - våre tanker og avgjørelser
             </h1>
 
             <div class="head__img">
