--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
         <!-- tatt inn bilder og tekst -->
         <section>
             <a href="https://www.oslomet.no/studier/studenthistorier/spa-fremtiden-matematikk-datavitenskap"
-                class="page__studenthistorie">
+                class="page__studenthistorie page__studenthistorie--farge">
 
                 <div class="page__studenthistorie-content">
                     <h1 class="page__studenthistorie-overskrift">
