--- a/github-page.html
+++ b/github-page.html
@@ -33,7 +33,7 @@
 
   </header>
 
-  <!-- Seksjon for bilder -->
+
   <article class="github">
     <div class="github__overskrift">
       <h1>
@@ -41,7 +41,7 @@
       </h1>
     </div>
 
-
+    <!-- Lager flere seksjoner med samme class som skal ha samme stil -->
     <section class="github__section">
       <h2 class="github__underoverskrift">Endringer og forbedringer av koder</h2>
 
@@ -56,6 +56,7 @@
         gjorde det at koden ble ryddig og oversiktlig. Github sitt verktøy gjorde det enkelt å opprette og ha oversikt
         av flere branches, slik at vi kunne jobbe effektivt uten å risikere konflikter i koden.</p>
 
+      <!-- div for bilder -->
       <div class="github__image">
         <img src="image/images-Github-page/Skjermbilde 2024-11-20 162249.png" alt="Kodeendringer eksempel 1">
         <img src="image/images-Github-page/Skjermbilde 2024-11-20 162401.png" alt="Kodeendringer eksempel 2">
@@ -85,6 +86,7 @@
     <section class="github__section">
       <h2 class="github__underoverskrift">Fordeler ved Bruk av Git</h2>
 
+      <!-- Lager en liste -->
       <ul class="github__liste github__liste--style">
         <li>
           <strong>Sporbarhet:</strong> En av de største fordelene ved Git er evnen til å holde oversikt over alle
