--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -85,7 +85,7 @@
                     For å kunne se hvordan nettsiden vår ville bli påvirket under scaling (feks ved bruk av mobil), valgte vi å 
                     kjøre gjennom tester som sammenliknet layout samt skala på ytelsesproblemer. Vi fant en nettside vi mente 
                     ga oss den feebacken vi trengte for å få et helhetslig inntrykk av at koden vår fungerte som ønsket. Nettsiden 
-                    heter <a href="//pagespeed.web.dev/" traget="_blank">pagespeed</a>, og resultatet kan du se i bildene ovenfor.
+                    heter <a href="//pagespeed.web.dev/" traget="_blank" style="color: white;">pagespeed</a>, og resultatet kan du se i bildene ovenfor.
                     For å teste layout på desktop valgte vi å gjøre en manuell test ved å koble oss opp på en desktop og se scalingen
                     selv. 
                 </p>
